# TrueConsense

./: .gitignore  CHANGELOG.md  README.md  docs-requirements.txt  env.yml  mkdocs.yml  pyproject.toml  release-please-config.json  setup.py  versions.json
.github/workflows/: release.yml
0.2.0/: 404.html  index.html
0.2.0/installation/: index.html
0.2.0/search/: search_index.json
0.2.0/user-guide/: index.html
0.3.0/: 404.html  index.html
0.3.0/changelog/: index.html
0.3.0/installation/: index.html
0.3.0/search/: search_index.json
0.3.0/user-guide/: index.html
0.4.0/changelog/: index.html
0.4.0/search/: search_index.json
0.4.0/user-guide/: index.html
0.5.0/: 404.html  index.html
0.5.0/changelog/: index.html
0.5.0/installation/: index.html
0.5.0/search/: search_index.json
0.5.0/user-guide/: index.html
0.5.1/: 404.html  index.html
0.5.1/changelog/: index.html
0.5.1/installation/: index.html
0.5.1/search/: search_index.json
0.5.1/user-guide/: index.html
0.5.2/: 404.html  index.html
0.5.2/changelog/: index.html
0.5.2/installation/: index.html
0.5.2/search/: search_index.json
0.5.2/user-guide/: index.html
TrueConsense/: Ambig.py  Calls.py  Coverage.py  Events.py  Inserts.py  ORFs.py  Outputs.py  Sequences.py  TrueConsense.py  func.py  indexing.py  version.py
docs/: index.md  installation.md  user-guide.md
latest/user-guide/: index.html
test/e2e/: test_e2e.py
